[gd_scene load_steps=5 format=3 uid="uid://xo4nsxadhsgl"]

[ext_resource type="Script" path="res://Weapon/Weapon.gd" id="1_b4t1v"]
[ext_resource type="PackedScene" uid="uid://dmj0nad12uk3v" path="res://Weapon/moveable_handler.tscn" id="2_3jnfe"]
[ext_resource type="PackedScene" uid="uid://um068gckkmmf" path="res://Weapon/weapon_collision_handler.tscn" id="3_njgrk"]
[ext_resource type="AudioStream" uid="uid://dbihlojtcxwb8" path="res://weapon_audio.tres" id="4_3bwt7"]

[node name="Weapon" type="RigidBody2D"]
collision_layer = 4
collision_mask = 43
mass = 2.0
linear_damp = 2.5
script = ExtResource("1_b4t1v")

[node name="MoveableHandler" parent="." instance=ExtResource("2_3jnfe")]
unique_name_in_owner = true

[node name="WeaponCollisionHandler" parent="." instance=ExtResource("3_njgrk")]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
unique_name_in_owner = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_3bwt7")

[connection signal="enemy_hit" from="WeaponCollisionHandler" to="." method="_on_enemy_hit"]
